[metadata]
name = lms-mon
version = 0.1.0
description = htop-style TUI monitor for LM Studio
long_description = file: README.md
long_description_content_type = text/markdown
author = dcolley
license = MIT
python_requires = >=3.10

[options]
py_modules = lms_mon
install_requires =
    textual>=0.70.0
    httpx>=0.27.0
    psutil>=5.9.0

[options.entry_points]
console_scripts =
    lms-mon = lms_mon:main
